using-kubernates/inventory-service/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deployment-v1
spec:
  selector:
    matchLabels:
      app: inventory
      version: v1
  template:
    metadata:
      labels:
        app: inventory
        version: v1
    spec:
      containers:
        - name: inventory
          image: mianmahroz/inventory-service
          ports:
            - containerPort: 8083
          volumeMounts:
            - mountPath: /etc/podinfo
              name: podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  type: ClusterIP
  selector:
    app: inventory
  ports:
    - port: 8083
      targetPort: 8083
